	  the feature then, if enabled, CONFIG_NSH_CONDEV provides the alternative
	  console device name (2014-5-5).
	* arch/arm/src/sam34/sam_rtt.c/.h:  RTT driver from Bob Doiron.  Also
	  added high resolution RTC emulation using the RTT for the sub-second
	  counter (2014-5-5).
	* configs/sam4s-xplained-pro:  Clean-up of LED usage and also some
	  integration of new timer features.  From Bob Doiron  (2014-5-5).
	* drivers/timer.c and include/nuttx/timer.h:  Timer driver updates from
	  Bob Doiron (2014-5-5).
	* binfmt/symtab_findorderedbyname.c:  Fix an error in the symbol search
	  function.  Noted by Pelle Windestam (2014-5-6).
	* arch/arm/src/stm32/stm32f40xxx_rcc.c and configs/nucleo-f401re/include/board.h:
	  The Nucleo-F401RE has no on-board crystals and, hence, needs to run
	  with the PLL input from the on-chip HSI clock (2014-5-6).
	* arch/arm/src/armv7-a/arm_memcpy.S:  This is the same optimized memcpy()
	  function that Mike Smith brought in for the ARMv7-M with minor tweaks
	  by David Sidrane to work with the ARMv7-A (2014-5-6).
	* binfmt/libpcode, pcode.c, include/nuttx/poff.h, and binfmt/pcode.h:
	  Framework to support Pascal P-Code as a binary format.  At present this
	  logic is incomplete and really nothing more than a thought experiment
	  to determine the feasibility of the P-code binary format (2014-5-7).
	* drivers/sensors/Make.defs:  Correct build dependency.  Sourceforge
	  ticket #41 from Kosma Moczek (2014-5-8).
	* drivers/serial.c, include/nuttx/serial.h, arch/arm/src/stm32/stm32_serial.c
	  and minor updates to all other drivers using the serial interface:  Add an
	  rxflowcontrol method to the serial interface to better support RX flow control.
	  From Jussi Kivilinna (2014-5-8).
	* arch/arm/include/stm32 and src/stm32:  Add support for the STM32152 and
	  STM32162 Medium+ density parts (plus miscellaneous other improvements to
	  the original STM32151 logic).  From Jussi Kivilinna and Sami Pelkonen
	  (2014-5-8).