@@ -66,7 +66,7 @@ endif
 config PCODE
 	bool "Support P-Code Applications"
 	default n
-	depends on INTERPRETERS_PCODE
+	depends on INTERPRETERS_PCODE && INTERPRETERS_PRUN && (!NUTTX_KERNEL || EXPERIMENTAL)
 	---help---
 		Enable support for interpreted P-Code binaries.  P-Code binaries are
 		generated by the NuttX Pascal compiler.
