@@ -449,6 +449,7 @@ CONFIG_EXAMPLES_PASHELLO=y
 #
 # CONFIG_INTERPRETERS_FICL is not set
 CONFIG_INTERPRETERS_PCODE=y
+CONFIG_INTERPRETERS_PRUN=y
 
 #
 # Network Utilities
